# openshrimp

./: .env.example  .gitignore  Dockerfile  MEMORY.md  README.md  docker-compose.yaml  pyproject.toml  restartDeployment.sh
.claude/: settings.local.json
.github/workflows/: ci.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  agent-deployment.yaml  agent-pvc.yaml  agent-service.yaml  browserless-deployment.yaml  browserless-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  pgvector-deployment.yaml  pgvector-pvc.yaml  pgvector-service.yaml  serviceaccount.yaml
plugins/: README.md  conftest.py
plugins/browser_research/: manifest.json  tool.py
plugins/filesystem/: manifest.json  test_filesystem.py  tool.py
plugins/human_input/: manifest.json  tool.py
plugins/memory_rag/: tool.py
plugins/task_tracking/: manifest.json  test_task_tracking.py  tool.py
plugins/telegram_notify/: tool.py
src/: agent.py  api.py  browser.py  credentials.py  db.py  human_input.py  models.py  playbooks.py  plugin_loader.py  schemas.py  task_service.py  telegram_bot.py  telegram_state.py
src/plugins/: README.md  conftest.py  test_plugin_contract.py
src/plugins/browser/: manifest.json  test_browser.py  tool.py
src/plugins/browser_research/: test_browser_research.py  tool.py
src/plugins/credentials/: manifest.json  test_credentials.py  tool.py
src/visualization/: api_schemas.py
tests/: conftest.py  test_human_input.py  test_models_defaults.py  test_multi_user.py  test_task_resume.py  test_task_service.py
(+15 files in other folders)
