[project]
name = "openshrimp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.2",
    "jinja2>=3.1.0",
    "langchain>=1.2.10",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-openrouter>=0.0.2",
    "langgraph>=0.2.0",
    "openai>=2.21.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyppeteer>=1.0.2",
    "pyppeteer-stealth>=2.7.4",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
    "python-telegram-bot[job-queue]>=21.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["plugins", "tests"]
pythonpath = ["src"]
